--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,8 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+
+
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
